--- a/WonInfo/app/src/main/res/layout/a_24_list_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/a_24_list_fragment.xml
@@ -6,13 +6,26 @@
     android:clickable="true"
     android:orientation="vertical" >
 
-    <EditText
-        android:id="@+id/editText"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="정거장 검색" />
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="정거장 검색" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="B" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
