--- a/WonInfo/app/src/main/res/layout/a_24_list_item.xml
+++ b/WonInfo/app/src/main/res/layout/a_24_list_item.xml
@@ -2,17 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="56dp"
-    android:background="@color/colorPrimary"
-    android:clickable="true">
+    android:background="@color/colorPrimary">
 
 
     <RelativeLayout
+        android:id="@+id/a_24_busList_btn"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="1dp"
         android:layout_marginRight="1dp"
+        android:layout_marginTop="1dp"
         android:layout_weight="1"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:clickable="true">
 
         <LinearLayout
             android:layout_width="wrap_content"
