--- a/WonInfo/app/src/main/res/layout/a_17_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/a_17_fragment.xml
@@ -231,6 +231,7 @@
                 </LinearLayout>
 
             </com.github.chuross.library.ExpandableLayout>
+
             <include
                 layout="@layout/item_line"
                 android:layout_width="match_parent"
@@ -239,7 +240,13 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="80dp"/>
+                android:layout_height="80dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/item_line"/>
+            </LinearLayout>
         </LinearLayout>
 
     </ScrollView>
