MainActivity 수정 #로그인, 로그아웃기능 변경 LoginActivity 수정 #로그인 코드 수정

--- a/WonInfo/app/src/main/res/layout/a_01_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/a_01_fragment.xml
@@ -82,6 +82,11 @@
 
             </com.github.chuross.library.ExpandableLayout>
 
+            
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@drawable/item_line"/>
             <include
                 layout="@layout/item_line"
                 android:layout_width="match_parent"
