디자인 변경 #레이아웃 라운드박스 #수강신청페이지(임시) #메인화면 디자인

--- a/WonInfo/app/src/main/res/layout/a_20_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/a_20_fragment.xml
@@ -37,7 +37,8 @@
                     android:layout_weight="1"
                     android:text="주요학사안내"
                     android:textColor="@color/Theme_Black"
-                    android:textSize="@dimen/title_size" />
+                    android:textSize="@dimen/title_size"
+                    />
 
             </RelativeLayout>
 
