--- a/WonInfo/app/src/main/res/layout/a_03_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/a_03_fragment.xml
@@ -49,7 +49,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:background="@drawable/roundbox">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -179,7 +180,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:background="@drawable/roundbox">
 
                     <TextView
                         android:layout_width="wrap_content"
