--- a/WonInfo/app/src/main/res/layout/a_21_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/a_21_fragment.xml
@@ -79,7 +79,8 @@
                     android:layout_weight="1"
                     android:text="중앙도서관 이용시간"
                     android:textColor="@color/Theme_Black"
-                    android:textSize="@dimen/title_size" />
+                    android:textSize="@dimen/title_size"
+                    />
 
             </RelativeLayout>
 
