--- a/WonInfo/app/src/main/res/values/dimens.xml
+++ b/WonInfo/app/src/main/res/values/dimens.xml
@@ -1,12 +1,21 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <!--design-->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">212dp</dimen>
 
-    <dimen name="title_size">18sp</dimen>
-    <dimen name="mini_size">10sp</dimen>
     <dimen name="form_margin">16dp</dimen>
     <dimen name="form_contentmargin">7dp</dimen>
+
+
+    <!--font-->
+    <dimen name="title_size">18sp</dimen>
+    <dimen name="mini_size">10sp</dimen>
+    <dimen name="bigtitle_size">15sp</dimen>
+    <dimen name="menubigtitle_size">20sp</dimen>
+
+
+
 </resources>
