--- a/WonInfo/app/src/main/res/layout/menu_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/menu_fragment.xml
@@ -29,8 +29,6 @@
                 android:id="@+id/textView"
                 android:layout_width="175dp"
                 android:layout_height="99dp"
-                android:layout_constraintStart_toStartOf="parent"
-                android:layout_constraintTop_toTopOf="parent"
                 android:layout_margin="15dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
@@ -59,8 +57,6 @@
                 android:id="@+id/textView2"
                 android:layout_width="175dp"
                 android:layout_height="99dp"
-                android:layout_constraintStart_toStartOf="parent"
-                android:layout_constraintTop_toTopOf="parent"
                 android:layout_margin="15dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
@@ -89,8 +85,6 @@
                 android:id="@+id/textVie3"
                 android:layout_width="240dp"
                 android:layout_height="100dp"
-                android:layout_constraintStart_toStartOf="parent"
-                android:layout_constraintTop_toTopOf="parent"
                 android:layout_margin="15dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
@@ -123,8 +117,6 @@
                 android:id="@+id/textView4"
                 android:layout_width="229dp"
                 android:layout_height="99dp"
-                android:layout_constraintStart_toStartOf="parent"
-                android:layout_constraintTop_toTopOf="parent"
                 android:layout_margin="15dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
@@ -157,19 +149,18 @@
                 app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
                 app:layout_constraintVertical_bias="0.0" />
 
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="229dp"
-                android:layout_height="99dp"
-                android:layout_constraintStart_toStartOf="parent"
-                android:layout_constraintTop_toTopOf="parent"
-                android:layout_margin="15dp"
-                android:text="홍보\n게시판"
-                android:textColor="@color/Theme_Blue"
-                android:textSize="@dimen/menubigtitle_size"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@+id/button"
-                tools:layout_editor_absoluteY="265dp" />
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="229dp"
+            android:layout_height="99dp"
+            android:layout_margin="15dp"
+            android:layout_marginStart="12dp"
+            android:text="홍보\n게시판"
+            android:textColor="@color/Theme_Blue"
+            android:textSize="@dimen/menubigtitle_size"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/button"
+            tools:layout_editor_absoluteY="319dp" />
 
 
         </android.support.constraint.ConstraintLayout>
@@ -191,8 +182,6 @@
             android:id="@+id/textVie6"
             android:layout_width="233dp"
             android:layout_height="100dp"
-            android:layout_constraintStart_toStartOf="parent"
-            android:layout_constraintTop_toTopOf="parent"
             android:layout_margin="15dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
@@ -205,5 +194,5 @@
 
 
 
-
     </android.support.constraint.ConstraintLayout>
+</android.support.constraint.ConstraintLayout>
