--- a/WonInfo/app/src/main/res/layout/textboard.xml
+++ b/WonInfo/app/src/main/res/layout/textboard.xml
@@ -49,7 +49,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="23dp"
 
 
         android:background="@drawable/item_line"
@@ -59,6 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
     <Button
+        android:id="@+id/textboard_write_btn"
         android:layout_width="197dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
@@ -66,6 +67,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:background="@color/Theme_Red"
+        android:onClick="mOnPopupClick"
         android:text="글쓰기"
         android:textColor="@color/Theme_White"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -73,26 +75,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText4"
         app:layout_constraintVertical_bias="0.062" />
-
-    <ScrollView
-        android:layout_width="21dp"
-        android:layout_height="291dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/editText4"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/editText4"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.137">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
 
 
 </android.support.constraint.ConstraintLayout>
