--- a/WonInfo/app/src/main/res/layout/community_main_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/community_main_fragment.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/a_25_text01"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginStart="8dp"
@@ -26,7 +26,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/a_25_text01" />
 
     <FrameLayout
         android:id="@+id/fragment_youtube_player"
