--- a/WonInfo/app/src/main/res/layout/tutorial_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/tutorial_fragment.xml
@@ -23,7 +23,7 @@
         android:layout_weight="1"
         android:layout_margin="@dimen/form_contentmargin"
         android:text="검색창"
-        android:id="@+id/textView3" />
+        android:id="@+id/a_25_text07" />
 
 
     <TextView
@@ -37,7 +37,7 @@
         android:text="웹정보서비스 바로가기"
         android:textColor="@color/colorBackground"
         android:textSize="@dimen/title_size"
-        android:id="@+id/textView4" />
+        android:id="@+id/a_25_text11" />
 
     <TextView
         android:layout_width="wrap_content"
