디자인변경 #버튼툴바 아이콘, 애니메이션 바꿈

--- a/WonInfo/app/src/main/res/layout/a_03_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/a_03_fragment.xml
@@ -50,7 +50,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:background="@drawable/roundbox">
+                    >
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -180,8 +180,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:background="@drawable/roundbox">
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
