list_pressed 생성 , fragment12/14/17/19/20 수정 #사전 내 뒤로가기 수정 #레이아웃 접기 #사전 클릭시 애니메이션

--- a/WonInfo/app/src/main/res/layout/a_12_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/a_12_fragment.xml
@@ -50,8 +50,6 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="@dimen/form_margin"
-
-                    android:rotation="180"
                     app:srcCompat="@drawable/ic_page_expand" />
 
 
@@ -70,8 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/form_margin"
-                android:layout_marginRight="@dimen/form_margin"
-                app:exl_expanded="true">
+                android:layout_marginRight="@dimen/form_margin">
 
                 <GridLayout
                     android:layout_width="match_parent"
