--- a/WonInfo/app/src/main/res/layout/a_23_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/a_23_fragment.xml
@@ -28,7 +28,6 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="@dimen/form_margin"
-                    android:rotation="180"
                     app:srcCompat="@drawable/ic_page_expand" />
 
 
@@ -44,8 +43,7 @@
             <com.github.chuross.library.ExpandableLayout
                 android:id="@+id/a_23_exl0"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:exl_expanded="true">
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:layout_width="match_parent"
