--- a/WonInfo/app/src/main/res/layout/dictionary_main_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/dictionary_main_fragment.xml
@@ -2,18 +2,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
     android:clickable="true"
     android:orientation="vertical"
-    android:focusable="true">
+    android:focusable="true"
+    android:background="?attr/selectableItemBackground">
 
 
     <ListView
-        android:id="@+id/listview"
+        android:id="@+id/dictionary_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:divider="#00000000" />
+        android:divider="#00000000"
+        android:listSelector="@drawable/list_pressed"
+
+     />
+
 
 </RelativeLayout>
