--- a/WonInfo/app/src/main/res/values/colors.xml
+++ b/WonInfo/app/src/main/res/values/colors.xml
@@ -13,7 +13,9 @@
     <color name="Theme_Beige">#F5EBDC</color>
     <color name="Theme_Black">#000000</color>
     <color name="Theme_Gray">#9E9E9E</color>
+    <color name="Theme_LightGray">#E6E6E6</color>
     <color name="Theme_White">#FFFFFF</color>
+
 
 
 
