--- a/WonInfo/app/src/main/res/drawable/splash_background.xml
+++ b/WonInfo/app/src/main/res/drawable/splash_background.xml
@@ -8,8 +8,8 @@
             <gradient
                 android:angle="90"
                 android:startColor="@color/colorPrimary"
-                android:centerColor="@color/Theme_White"
-                android:endColor="@color/Theme_Blue"
+                android:centerColor="@color/colorPrimary"
+                android:endColor="@color/Theme_White"
                 android:type="linear"
                 />
         </shape>
