--- a/WonInfo/app/src/main/res/layout/home_main_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/home_main_fragment.xml
@@ -28,17 +28,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/a_25_text01" />
 
-
-    <FrameLayout
-        android:id="@+id/fragment_youtube_player"
-        android:layout_width="0dp"
-        android:layout_height="180dp"
-        android:layout_marginEnd="8dp"
+    <WebView
+        android:id="@+id/youtube_player_view"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         android:layout_marginStart="8dp"
-        android:layout_weight="1"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/button">
 
+    </WebView>
 </android.support.constraint.ConstraintLayout>
