--- a/WonInfo/app/src/main/res/layout/community_main_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/community_main_fragment.xml
@@ -1,197 +1,189 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorBackground"
+    android:clickable="true"
+    android:orientation="vertical">
 
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/constraintLayout5"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/Theme_Beige"
-        android:orientation="vertical">
+        android:background="@color/Theme_Beige">
+
 
         <android.support.constraint.ConstraintLayout
-            android:id="@+id/constraintLayout"
-            android:layout_width="wrap_content"
+            android:id="@+id/box1"
+            android:layout_width="165dp"
             android:layout_height="wrap_content"
             android:layout_margin="7dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginStart="8dp"
             android:background="@drawable/boxbutton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/a_25_text01"
-                android:layout_width="175dp"
-                android:layout_height="99dp"
+                android:id="@+id/text1"
+                android:layout_width="164dp"
+                android:layout_height="98dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:text="대나무숲"
+                android:textColor="@color/Theme_Blue"
+                android:textSize="@dimen/menubigtitle_size"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:layout_width="64dp"
+                android:layout_height="62dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:srcCompat="@drawable/ic_bamboo" />
+        </android.support.constraint.ConstraintLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/box2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="7dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/boxbutton"
+            app:layout_constraintBottom_toTopOf="@+id/box4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/box1"
+
+
+
+
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/text2"
+                android:layout_width="164dp"
+                android:layout_height="98dp"
                 android:layout_margin="15dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:text="자유게시판"
                 android:textColor="@color/Theme_Blue"
                 android:textSize="@dimen/menubigtitle_size"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="15dp" />
-
-
+                app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
 
         <android.support.constraint.ConstraintLayout
-            android:id="@+id/constraintLayout2"
-            android:layout_width="wrap_content"
+            android:id="@+id/box3"
+            android:layout_width="165dp"
             android:layout_height="wrap_content"
             android:layout_margin="7dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
             android:background="@drawable/boxbutton"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
+            app:layout_constraintTop_toBottomOf="@+id/box1">
 
             <TextView
-                android:id="@+id/a_25_text02"
-                android:layout_width="175dp"
-                android:layout_height="99dp"
+                android:id="@+id/text3"
+                android:layout_width="164dp"
+                android:layout_height="98dp"
                 android:layout_margin="15dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:text="교환장터"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="자유시장"
                 android:textColor="@color/Theme_Blue"
                 android:textSize="@dimen/menubigtitle_size"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-
         </android.support.constraint.ConstraintLayout>
 
         <android.support.constraint.ConstraintLayout
-            android:id="@+id/constraintLayout3"
-            android:layout_width="wrap_content"
+            android:id="@+id/box4"
+            android:layout_width="225dp"
             android:layout_height="wrap_content"
             android:layout_margin="7dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/boxbutton"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
+            app:layout_constraintTop_toBottomOf="@+id/box3">
 
             <TextView
-                android:id="@+id/textVie3"
-                android:layout_width="240dp"
-                android:layout_height="100dp"
+                android:id="@+id/text4"
+                android:layout_width="164dp"
+                android:layout_height="98dp"
                 android:layout_margin="15dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:text="맛집게시판"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="전국노래자랑"
                 android:textColor="@color/Theme_Blue"
                 android:textSize="@dimen/menubigtitle_size"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-
         </android.support.constraint.ConstraintLayout>
 
         <android.support.constraint.ConstraintLayout
-            android:id="@+id/constraintLayout4"
+            android:id="@+id/box5"
+            android:layout_width="225dp"
+            android:layout_height="134dp"
+            android:layout_margin="7dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/boxbutton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/box4">
+
+            <TextView
+                android:id="@+id/text5"
+                android:layout_width="164dp"
+                android:layout_height="98dp"
+                android:layout_margin="15dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="침묵게시판"
+                android:textColor="@color/Theme_Blue"
+                android:textSize="@dimen/menubigtitle_size"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </android.support.constraint.ConstraintLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/box6"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="219dp"
             android:layout_margin="7dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/boxbutton"
-            app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/constraintLayout"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintStart_toEndOf="@+id/box5"
+            app:layout_constraintTop_toBottomOf="@+id/box2">
 
             <TextView
-                android:id="@+id/a_25_text11"
-                android:layout_width="229dp"
-                android:layout_height="99dp"
+                android:id="@+id/text6"
+                android:layout_width="164dp"
+                android:layout_height="98dp"
                 android:layout_margin="15dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:text="비밀게시판"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="인성터진\n사람모임"
                 android:textColor="@color/Theme_Blue"
                 android:textSize="@dimen/menubigtitle_size"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-
         </android.support.constraint.ConstraintLayout>
-
-
-        <android.support.constraint.ConstraintLayout
-
-
-                android:id="@+id/button"
-                android:layout_width="107dp"
-                android:layout_height="206dp"
-                android:layout_margin="7dp"
-                android:layout_marginBottom="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/boxbutton"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/constraintLayout3"
-                app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
-                app:layout_constraintVertical_bias="0.0" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="229dp"
-            android:layout_height="99dp"
-            android:layout_margin="15dp"
-            android:layout_marginStart="12dp"
-            android:text="홍보\n게시판"
-            android:textColor="@color/Theme_Blue"
-            android:textSize="@dimen/menubigtitle_size"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/button"
-            tools:layout_editor_absoluteY="319dp" />
-
-
-        </android.support.constraint.ConstraintLayout>
-
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/constraintLayout6"
-        android:layout_width="255dp"
-        android:layout_height="133dp"
-        android:layout_margin="7dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="36dp"
-        android:background="@drawable/boxbutton"
-        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="parent"
-        app:layout_constraintVertical_bias="1.0">
-
-        <TextView
-            android:id="@+id/textVie6"
-            android:layout_width="233dp"
-            android:layout_height="100dp"
-            android:layout_margin="15dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:text="홍보게시판"
-            android:textColor="@color/Theme_Blue"
-            android:textSize="@dimen/menubigtitle_size"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-
     </android.support.constraint.ConstraintLayout>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
