--- a/WonInfo/app/src/main/res/menu/bottom_bar.xml
+++ b/WonInfo/app/src/main/res/menu/bottom_bar.xml
@@ -18,7 +18,7 @@
         android:title=""/>
     <item
         android:id="@+id/bottom_bar_menu_custom"
-        android:icon="@drawable/ic_bus"
+        android:icon="@drawable/ic_eat_2"
         app:showAsAction="ifRoom"
         android:title=""/>
     <item
